extensions/wikia/Venus/styles/article/comments.scss
@import 'skins/shared/mixins/arrow';
@import 'skins/shared/color';
@import 'extensions/wikia/Venus/styles/mixins';
@import 'extensions/wikia/Venus/styles/typographyMixins';

.WikiaArticleComments {
	clear: both;
	margin: 0 $medium-grid-column + $medium-grid-gutter + $medium-content-padding - $content-border-width 60px;
	padding: 0 $medium-grid-column-padding;

	/* heading */
	h3 {
		@include clearfix;
		margin: 60px 0 30px;

		> span {
			@include font-size-s;
			color: #aaa;
			float: right;
			text-align: right;
		}
	}

	/* editor */
	.session {
		position: absolute;
	}

	/*  move toolbar above editor area - CON-2183 */
	/* The Ugly And Hacky Solution (TM) */
	.article-comm-form {
		/* margin set in .WikiaArticleComments #article-comments > .MiniEditorWrapper #article-comm-form */
		margin-top: 64px !important; /* 44px (toolbar height) + 2 * 10px (top and bottom margin) */
		position: relative;

		.toolbar {
			display: block;
			position: absolute;
			top: -64px;
		}
	}

	.MiniEditorWrapper .toolbar {
		margin: 10px 0;

		.cke_button {
			border-right: solid 1px #ededed;
			display: inline-block;
			line-height: 44px;

			&.RTEVideoButton {
				border-right: none;
			}

			& > a {
				background: transparent;
				border: none;
				float: none;
				margin: 0 12px;
				vertical-align: middle;
			}

			/* font-based icons will be used instead of PNG sprite */
			.cke_icon {
				@include font-size-s;
				background-image: none;
				position: relative;

				&::before {
					position: absolute;
					top: -$font-size-s;
				}
			}
		}

		.cke_separator {
			display: none !important;
		}

		/*
		 * Customize editor toolbar icons
		 */

		/* editor modes switching */
		.cke_button_ModeSource .cke_icon::before {
			@include venus-icon($venus-icon-brackets);
		}

		.cke_button_ModeWysiwyg .cke_icon::before {
			@include venus-icon($venus-icon-eye);
		}

		/* text formatting */
		.cke_button_bold .cke_icon::before {
			@include venus-icon($venus-icon-b);
		}

		.cke_button_italic .cke_icon::before {
			@include venus-icon($venus-icon-i);
		}

		.cke_button_link .cke_icon::before {
			@include venus-icon($venus-icon-link);
		}

		/* media tools */
		.RTEImageButton .cke_icon::before {
			@include venus-icon($venus-icon-photo);
		}

		.RTEVideoButton .cke_icon::before {
			@include venus-icon($venus-icon-movie);
		}
	}

	/* submit button */
	.buttons {
		margin: 10px 0;

		.actionButton {
			@include font-size-xxs;
			background: transparent;
			border: solid 2px $color-buttons;
			border-radius: 0;
			cursor: pointer;
			display: table-cell;
			font-weight: bold;
			height: 44px;
			padding: 0 15px 0 20px;
			text-transform: uppercase;
			vertical-align: middle;
		}
	}

	.throbber {
		margin: 10px !important;
		vertical-align: middle;
		visibility: hidden;
	}

	/* comments */
	.comments {
		list-style: none;
		margin: 0 0 0 70px;
		padding: 0;

		.comment {
			border-top: solid 1px #ededed;
			padding: 20px 0;
		}

		blockquote {
			margin: 0;

			/* date, reply & tools */
			.edited-by {
				clear: both;
				color: #aaa;
				margin-top: 20px;

				/* timestamp */
				& > .permalink {
					@include font-size-xs;
					color: $color-alternate-text;
				}
			}

			/* edit tools */
			.tools {
				float: right;
				list-style: none;
				visibility: hidden;

				li {
					border-right: solid 1px #ededed;
					float: left;
					padding: 0 5px;
				}

				li:last-child {
					border-right: none;
				}

				/* icons */
				a {
					@include font-size-base;
					color: $color-links;

					&:hover {
						text-decoration: none;
					}

					&.article-comm-delete::before {
						@include venus-icon($venus-icon-cross-negative);
					}
					&.article-comm-edit::before {
						@include venus-icon($venus-icon-edit);
						font-size: 2em;
					}

					&.article-comm-reply {
						padding: 5px;
					}
					&.article-comm-reply::before {
						@include venus-icon($venus-icon-back);
					}
				}
			}

			&:hover .tools {
				visibility: visible;
			}
		}

		&.loading {
			opacity: .7;
		}
	}

	.sub-comments {
		list-style: none;
		margin: 0 0 0 70px;
		padding: 0;
	}

	/* avatars */
	.speech-bubble-avatar {
		margin: -10px 0 -25px -70px;

		a {
			display: inline-block;
			font-weight: bold;
			line-height: 50px;
		}
	}

	.avatar {
		border-radius: 25px;
		margin: 0 10px;
		vertical-align: middle;
	}

	/* pagination */
	.article-comments-pagination {
		color: $color-links;
		margin: 0 auto 10px;
		text-align: center;

		a {
			color: $color-links;
			padding: 2px 8px;
			margin: 0 4px;

			/* the current page */
			&.article-comments-pagination-link-active {
				color: $color-text;
				font-weight: bold;
			}
		}
	}

	.comments-show-more {
		@include font-size-xxs;

		background-color: $color-buttons;
		background-image: none;
		border: none;
		border-radius: 0;
		color: $color-button-text;
		cursor: pointer;
		display: none;
		font-weight: bold;
		height: 40px;
		margin: 20px auto 60px;
		padding: 0 15px 0 20px;
		text-transform: uppercase;
		vertical-align: middle;

		&::after {
			@include arrow(5px, rgba($color-button-text, .5));
			content: ' ';
			display: inline-block;
			margin: -2px 0 0 15px;
		}
	}
}

@media #{$large-up} {
	.WikiaArticleComments {
		margin: 0 $large-grid-column + $large-grid-gutter + $large-content-padding - $content-border-width 60px;
		padding: 0 $large-grid-column-padding;
	}
}

@media #{$small-only} {
	.WikiaArticleComments {
		margin: 0 $small-grid-column + $small-grid-gutter + $small-content-padding - $content-border-width 60px;
		padding: 0 $small-grid-column-padding;
	}
}

