Comments: more spacing fixes

--- a/extensions/wikia/Venus/styles/article/comments.scss
+++ b/extensions/wikia/Venus/styles/article/comments.scss
@@ -149,6 +149,14 @@
 			padding: 20px 0;
 		}
 
+		p {
+			margin: 0;
+		}
+
+		p + p {
+			margin-top: 20px;
+		}
+
 		blockquote {
 			margin: 0;
 
@@ -156,7 +164,7 @@
 			.edited-by {
 				clear: both;
 				color: #aaa;
-				margin-top: 20px;
+				margin-top: 10px;
 
 				/* timestamp */
 				& > .permalink {
@@ -225,7 +233,7 @@
 
 	/* avatars */
 	.speech-bubble-avatar {
-		margin: -10px 0 -25px -70px;
+		margin: -10px 0 -7px -70px;
 
 		a {
 			display: inline-block;
